--- a/src/components/Stack/style.scss
+++ b/src/components/Stack/style.scss
@@ -80,8 +80,11 @@
 
 @media only screen and (min-width: $monitor-width) {
     .stack {
+      align-items: start;
+      
         h2 {
             font-size: $header-font-size-large;
+            margin-left: 20%;
         }
     
         .body {
